DSL/DiversiaScript/test/neg/typematching.div

plugin Sky{}
//plugin Haha{}
def Test2{
	
}

def Test {
	
	//prop lala:Int = 0;
	
	//component Animation {}
	//component Vector2 {}
	var test:Test2 = new Test2{
		ParentName = "dfd"
		Name = "did"
	}

	
	on Frame(){
		var test:Test2 = new Test2{}; 
		/*
		//var test:Node = Object();
		var temp:Vector3 = [3,0]; 
		var sec:Void = "bob";
		var m:Mesh = Mesh(); // <-- this is a component, is this allowed?
		var number1:Int = 34+4;
		var number2:Real = 4+test;
		*/
		//Name = "dude";
		//ParentName = "dude"; 
	
/* 
		number1 = number2;
		number2 = number1;
		test = ClientObject();
		ClientObject() = ClientObject();
		new Test{} = new Test{};
		
		1 = 3;
		3.4 = 3;
		3 = 5.6;
		
		Node() = ClientObject();
		ClientObject() = Node();
		temp = Sky.FogColour;
		temp = Animation.HasEnded();	
		temp = test.lala;
		temp = m.ShapeUV;
		temp = Position.IsZeroLength; 
		Destroy() = null;
		Kill();
		sec = Position.Normalize(); 
		lala = temp.Zero.Zero.Normalize();*/
	}
	
}